package com.masanz.imperia;

public class Main {

    public static void main(String[] args) {
        com.masanz.imperia.terminal.Main.main(args);
    }

}
