@startuml
class com.masanz.imperia.modelo.DosValores {
- int uno
- int dos
}


class com.masanz.imperia.terminal.Juego {
- MazoTarjetas mazoTarjetas
# List<Jugador> jugadores
# int turno
}


class com.masanz.imperia.modelo.Tirada {
- ArrayList<Integer> valores
- Dado dado
}


class com.masanz.imperia.modelo.Mundo {
- {static} TreeMap<String,Territorio> mapaTerritorios
- {static} TreeMap<String,List<Territorio>> mapaContinentes
}

class com.masanz.imperia.terminal.Gui {
- {static} Scanner teclado
}


class com.masanz.imperia.terminal.Main {
+ {static} void main(String[])
}

class com.masanz.imperia.Main {
+ {static} void main(String[])
}


class com.masanz.imperia.modelo.Dado {
- int valor
}


class com.masanz.imperia.modelo.Jugador {
- String id
- String nombre
- MazoTarjetas mazoTarjetas
}


class com.masanz.imperia.modelo.Territorio {
- String nombre
- List<String> vecinos
- Jugador jugador
- int ejercitos
}

class com.masanz.imperia.modelo.MazoTarjetas {
- List<Tarjeta> lista
}

class com.masanz.imperia.modelo.Tarjeta {
- {static} int contador;
- int numero;
- String tipo
}

com.masanz.imperia.Main ..> com.masanz.imperia.terminal.Main
com.masanz.imperia.terminal.Main ..> com.masanz.imperia.terminal.Juego
com.masanz.imperia.terminal.Gui ..> com.masanz.imperia.modelo.Mundo
com.masanz.imperia.terminal.Juego *-> com.masanz.imperia.modelo.Jugador
com.masanz.imperia.terminal.Juego ..> com.masanz.imperia.terminal.Gui
com.masanz.imperia.terminal.Juego ..> com.masanz.imperia.modelo.Mundo
com.masanz.imperia.terminal.Juego ..> com.masanz.imperia.modelo.Tirada
com.masanz.imperia.terminal.Juego ..> com.masanz.imperia.modelo.DosValores
com.masanz.imperia.modelo.Mundo *-> com.masanz.imperia.modelo.Territorio
com.masanz.imperia.modelo.Tirada --> com.masanz.imperia.modelo.Dado
com.masanz.imperia.modelo.Territorio --> com.masanz.imperia.modelo.Jugador

com.masanz.imperia.modelo.MazoTarjetas *-> com.masanz.imperia.modelo.Tarjeta
com.masanz.imperia.modelo.Jugador --> com.masanz.imperia.modelo.MazoTarjetas
com.masanz.imperia.terminal.Juego *-> com.masanz.imperia.modelo.MazoTarjetas

@enduml